--- a/waybar/config
+++ b/waybar/config
@@ -9,7 +9,7 @@
 
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
     "modules-center": ["sway/window"],
-    "modules-right": ["pulseaudio", "memory", "cpu", "network", "battery", "temperature", "battery#bat2", "clock", "tray"],
+    "modules-right": ["pulseaudio", "memory", "cpu", "network", "battery", "battery#bat2", "clock", "tray"],
     /*"modules-right": ["mpd", "idle_inhibitor", "pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "keyboard-state", "sway/language", "battery", "battery#bat2", "clock", "tray"],*/
 
 
@@ -98,7 +98,7 @@
         "critical-threshold": 80,
         // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
-        "format-icons": [" ", " ", " "]
+        "format-icons": ["  ", "  ", "  "]
     },
     "backlight": {
         // "device": "acpi_video1",
