--- a/Codium/User/settings.json
+++ b/Codium/User/settings.json
@@ -1107,6 +1107,7 @@
     ],
     "editor.minimap.enabled": false,
     "debug.onTaskErrors": "debugAnyway",
-    "workbench.activityBar.visible": false
+    "workbench.activityBar.visible": false,
+    "editor.tabSize": 2
 
 }
