--- a/sway/config
+++ b/sway/config
@@ -332,6 +332,19 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86Search exec bemenu-run
 
+# lock
+set $lock swaylock -c 550000
+exec swayidle -w \
+    timeout 600 $lock \
+    timeout 570 'swaymsg "output * dpms off"' \
+    resume 'swaymsg "output * dpms on"' \
+    before-sleep $lock
+
+# manual lock
+
+set $lockman exec bash ~/.config/sway/lockman.sh
+bindsym $mod+Shift+i exec $lockman
+
 #assign [class="kitty"] 2
 #assign [class="Telegram"] 3
 
