--- a/sway/config
+++ b/sway/config
@@ -333,7 +333,7 @@ bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86Search exec bemenu-run
 
 # lock
-set $lock swaylock -c 550000
+set $lock swaylock -i ~/Immagini/bb.png
 exec swayidle -w \
     timeout 600 $lock \
     timeout 570 'swaymsg "output * dpms off"' \
