--- a/sway/config
+++ b/sway/config
@@ -333,13 +333,13 @@ bindsym $mod+Shift+p exec ~/.local/bin/scripts/poffrofi
 #bindsym $mod+Down exec amixer -q sset Master 3%-
 
 # capture all screens to clipboard    
-bindsym $mod+Shift+S exec grim - | wl-copy    
+bindsym $mod+alt+s exec grim - | wl-copy    
     
 # capture the specified screen area to clipboard    
-bindsym $mod+Alt+S exec grim -g "$(slurp)" - | wl-copy    
+bindsym $mod+shift+s exec grim -g "$(slurp)" - | wl-copy    
     
 # capture the focused monitor to clipboard    
-bindsym $mod+Control+S exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy
+bindsym $mod+Control+s exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy
 
 
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
