--- a/sway/config
+++ b/sway/config
@@ -152,20 +152,26 @@ bindsym $mod+Shift+Right move right
     #bindsym $mod+Shift+Down move down
     #bindsym $mod+Shift+Up move up
     #bindsym $mod+Shift+Right move right
+
+# Wacom tablet
+
+set $map-to-active swaymsg input type:tablet_tool map_to_output `swaymsg -t get_outputs | jq -r '.[] | select(.focused == true) | .name'`
+exec $map-to-active
+
 #
 # Workspaces:
 #
     # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
+    bindsym $mod+1 workspace number 1; exec $map-to-active
+    bindsym $mod+2 workspace number 2; exec $map-to-active
+    bindsym $mod+3 workspace number 3; exec $map-to-active
+    bindsym $mod+4 workspace number 4; exec $map-to-active
+    bindsym $mod+5 workspace number 5; exec $map-to-active
+    bindsym $mod+6 workspace number 6; exec $map-to-active
+    bindsym $mod+7 workspace number 7; exec $map-to-active
+    bindsym $mod+8 workspace number 8; exec $map-to-active
+    bindsym $mod+9 workspace number 9; exec $map-to-active
+    bindsym $mod+0 workspace number 10; exec $map-to-active
     # Move focused container to workspace
     bindsym $mod+Shift+1 move container to workspace number 1
     bindsym $mod+Shift+2 move container to workspace number 2
@@ -317,6 +323,22 @@ hide_edge_borders vertical
 set $i3lockwall i3lock -i ~/Immagini/bb.png
 exec_always ~/.local/bin/scripts/battery
 
+#input "1386:788:Wacom_Intuos_Pro_S_(WL)_Pen" {
+    #map_to_output DP-1
+    #map_from_region 0.0x0.0 1.0x0.901
+#}
+
+
+#bindsym $mod+1 workspace $ws1 ; exec $map-to-active
+#bindsym $mod+2 workspace $ws2 ; exec $map-to-active
+#bindsym $mod+3 workspace $ws3 ; exec $map-to-active
+#bindsym $mod+4 workspace $ws4 ; exec $map-to-active
+#bindsym $mod+5 workspace $ws5 ; exec $map-to-active
+#bindsym $mod+6 workspace $ws6 ; exec $map-to-active
+#bindsym $mod+7 workspace $ws7 ; exec $map-to-active
+#bindsym $mod+8 workspace $ws8 ; exec $map-to-active
+#bindsym $mod+9 workspace $ws9 ; exec $map-to-active
+
 #exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #exec_always --no-startup-id $HOME/.config/waybar/launch.sh
 exec_always --no-startup-id exec waybar
@@ -389,5 +411,9 @@ bindsym $mod+Shift+i exec $lockman
         #inactive_workspace #32323200 #32323200 #5c5c5c
     #}
 #}
+
+# startup
+
+bindswitch lid:on output eDP-1 disable
 
 #include /etc/sway/config.d/
