--- a/sway/config
+++ b/sway/config
@@ -186,16 +186,11 @@ exec $map-to-active
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 
-##workspace 1 output DP-1
-##workspace 2 output HDMI-A-1
-##workspace 3 output HDMI-A-1
-##workspace 4 output HDMI-A-1
-##workspace 5 output HDMI-A-1
-##workspace 6 output DP-1
-##workspace 7 output HDMI-A-1
-##workspace 8 output HDMI-A-1
-##workspace 9 output HDMI-A-1
-##workspace 10 output HDMI-A-1
+workspace 1 output DP-1
+workspace 2 output HDMI-A-1
+#workspace 3 output HDMI-A-1
+#workspace 4 output HDMI-A-1
+#workspace 5 output HDMI-A-1
 
 #
 # Layout stuff:
@@ -329,16 +324,6 @@ exec_always ~/.local/bin/scripts/battery
 #}
 
 
-#bindsym $mod+1 workspace $ws1 ; exec $map-to-active
-#bindsym $mod+2 workspace $ws2 ; exec $map-to-active
-#bindsym $mod+3 workspace $ws3 ; exec $map-to-active
-#bindsym $mod+4 workspace $ws4 ; exec $map-to-active
-#bindsym $mod+5 workspace $ws5 ; exec $map-to-active
-#bindsym $mod+6 workspace $ws6 ; exec $map-to-active
-#bindsym $mod+7 workspace $ws7 ; exec $map-to-active
-#bindsym $mod+8 workspace $ws8 ; exec $map-to-active
-#bindsym $mod+9 workspace $ws9 ; exec $map-to-active
-
 #exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #exec_always --no-startup-id $HOME/.config/waybar/launch.sh
 exec_always --no-startup-id exec waybar
@@ -389,7 +374,8 @@ set $lockman exec bash ~/.config/sway/lockman.sh
 bindsym $mod+Shift+i exec $lockman
 
 #assign [class="kitty"] 2
-#assign [class="Telegram"] 3
+assign [class="Telegram"] 3
+assign [class="thunderbird"] 5
 
 #for_window [class="kitty"] floating enable
 #for_window [class="Kitty"] floating enable
